--- a/renamemirrors.ui
+++ b/renamemirrors.ui
@@ -14,17 +14,7 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QListView" name="listView">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>40</y>
-      <width>251</width>
-      <height>441</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="lineEdit">
+   <widget class="QLineEdit" name="path1">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -34,7 +24,17 @@
      </rect>
     </property>
     <property name="text">
-     <string>m:\!- A_TUDASTAR\</string>
+     <string/>
+    </property>
+   </widget>
+   <widget class="QListWidget" name="list1">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>40</y>
+      <width>256</width>
+      <height>511</height>
+     </rect>
     </property>
    </widget>
   </widget>
